# pose_regularization

./: .codedocs  .gitignore  CMakeLists.txt  README.md  compile.m
applications/: algorithmCalibrationNDI.m  comp_dist.m  findOptimalParametersFirstOrder.m  findOptimalParametersSecondOrder.m  genTestData.m  poseDenoisingTest.m  syntheticExperiments.m
applications/CHMC/: autocorr.m  betaRand.m  gaussianExpt.m  gaussianNegLikelihood.m  gaussianRand.m  linearConstraint.m  mrandg.m  quatConst.m  vec_matmult.m
cmake/: UseCython.cmake
cmake/Modules/: FindMATIO.cmake
data/: algorithmCalibrationNDI.mat  synthData.mat  testData.mat  testDataSE3.mat
include/: manifold.h  pose_regularization.h
matlab/: README.md  compile.m  denoiseSE3prod.cpp  regularizeMatrices4x4.m  regularizeMatricesColumn.m
matlab/applications/: algorithmCalibrationNDI.m  comp_dist.m  denoiseAndCompare.m  denoiseAndCompareSystematic.m  denoiseMatrices.m  findOptimalParametersFirstOrder.m  findOptimalParametersSecondOrder.m  genPose.m  genTestData.m  paramsFirstAndSecondOrder.mat  paramsFirstOrder.mat  paramsTracking.mat  plotInMaxScreenResolution.m  plotPoseMatrix.m  plotSyntheticExperiments.m  poseDenoisingTest.m  syntheticExperiments.m
matlab/applications/CHMC/: README  betaNegLikelihood.m  binghamExpt.m  binghamVonMisesFisherGibbsSampler.m  binghamVonMisesFisherNegLikelihood.m  constrainedHMC.m  gammaNegLikelihood.m  gammaRand.m  guassianConditional.m  logsum.m
matlab/test/: proximalPointAlgorithm.m  test.m  testRegularizationSecondOrder.m
matlab/test/+SE3prod/: adjust.m  log.m
matlab/wrapper/: compile.m  regularizeSE3.cpp
python/: .gitignore  README.md  pose_denoising.pyx  setup.py  test_pose_denoising.py
python/applications/: algorithm_calibration_ndi.py  utils.py
python/pose_regularization/: __init__.py  pose_regularization.py  pypose_regularization.pyx
python/pose_regularization/test/: README  test_pose_regularization.py
python/tests/: test_pose_regularization.py
python/wrapper/: .gitignore  pose_denoising.pyx  setup.py
python/wrapper/pose_denoising/: interface.py
src/: manifoldGeneric.cpp  manifoldSE3prod.cpp  pose_regularization.cpp
src/SE3prod/: denoiseSE3prod.cpp  manifoldSE3prod.cpp
src/generic/: manifoldGeneric.cpp
test/: geodesicLength.m  proximalMapData.m  proximalMapRegFirstOrder.m  proximalMapRegSecondOrder.m  testRegularizationFirstOrder.m  tests.cpp
test/+SE3prod/: exp.m  frame.m  par.m  prod.m
test/data/: case5_preset_em1.mat  case5_preset_em2.mat  case5_preset_optical.mat
test/ext/gtest/: CMakeLists.txt
